# product-sync

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  watcher.py
src/product_scraper/: __main__.py  api.py  base.py  cache.py  cli.py  config.py  exporters.py  models.py  orchestrator.py  salesforce.py
src/product_scraper/fetchers/: amazon_api.py  amazon_scraper.py  flipkart_scraper.py
tests/: conftest.py  test_amazon_scraper.py  test_api.py  test_cache.py  test_exporters.py  test_flipkart_scraper.py  test_models.py  test_orchestrator.py  test_salesforce.py
