[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "product-scraper"
version = "0.1.0"
description = "Search Amazon.in and Flipkart.com and return top 3 results from each."
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pandas>=2.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "asyncio-throttle>=1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "ruff>=0.4",
    "watchdog>=4.0",
    "httpx>=0.27",
]

[project.scripts]
product-scraper = "product_scraper.cli:app"
product-scraper-api = "product_scraper.api:start"

[tool.hatch.build.targets.wheel]
packages = ["src/product_scraper"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
